--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # MQTT Configuration
-spring.integration.mqtt.broker-url=tcp://your-broker-url:1883
-spring.integration.mqtt.client-id=myClientId
+mqtt.broker.url=tcp://localhost:1883
+mqtt.client.id=ExampleSubscriber
+mqtt.topic=parking
 
 # Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
@@ -12,3 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Server Configuration
 server.servlet.context-path=/api
+
+spring.main.allow-bean-definition-overriding=true
