--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # MQTT Configuration
 mqtt.broker.url=tcp://localhost:1883
-mqtt.client.id=ExampleSubscriber
-mqtt.topic=parking
+mqtt.client.id=backend
+mqtt.topic.inbound=parking/inbound
+mqtt.topic.outbound=parking/outbound
 
 # Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
@@ -10,8 +11,6 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 # Server Configuration
 server.servlet.context-path=/api
-
 spring.main.allow-bean-definition-overriding=true
