--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 mqtt.broker.url=tcp://localhost:1883
 mqtt.client.id=backend
 mqtt.topic.inbound=parking/inbound
-mqtt.topic.outbound=parking/outbound
+mqtt.topic.outbound.exit=parking/outbound/exit
+mqtt.topic.outbound.entry=parking/outbound/entry
 
 # Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
